# git-merge-py

./: .gitignore  .travis.yml  README.md  git-merge-py  pyproject.toml  setup.py
.github/workflows/: ci.yml
gitmergepy/: __init__.py  actions.py  applier.py  applyier.py  conflicts.py  context.py  differ.py  differ_calls.py  differ_iterable.py  differ_one.py  matcher.py  runner.py  tools.py  tools_actions.py  tools_lists.py  tree.py
tests/: test_apply_changes.py  test_conflicts.py  test_context.py  test_differ.py  test_matcher.py  test_merges.py  test_runner.py  test_tools.py
