[project]
name = "gitmergepy"
version = "0.1.0"
description = "AST-based merge conflict resolver for Python files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Alessio Deiana", email = "adeiana@gmail.com" }
]
keywords = ["git", "merge", "conflict", "python", "ast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "baron @ git+https://github.com/Osso/baron.git@master",
    "redbaron @ git+https://github.com/Osso/redbaron.git@master",
    "python-Levenshtein>=0.12.2",
    "diff-match-patch>=20200713",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyright>=1.1",
    "ruff>=0.8",
]

[project.scripts]
gitmergepy = "gitmergepy.runner:main"

[project.urls]
Repository = "https://github.com/Osso/git-merge-py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["gitmergepy"]

[tool.pytest.ini_options]
log_format = "%(message)s"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["gitmergepy"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E721",   # type comparison (intentional for speed)
    "F841",   # unused variable (tests)
]

[tool.ruff.lint.isort]
known-first-party = ["gitmergepy"]
